add swagger add jwt test logic each tests
