# docs/swagger.yaml
@@ -98,4 +98,33 @@ paths:
           schema:
             $ref: '#/definitions/echo.HTTPError'
       summary: create bosyu
+  /api/bosyu/get:
+    get:
+      consumes:
+      - application/json
+      description: get bosyu in a group
+      parameters:
+      - description: user_id which has bosyus
+        in: query
+        name: user_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Bosyu'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+      summary: get bosyu
 swagger: "2.0"
